<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_dialog_analytics_notice">This app may collect anonymous usage data.</string>
    <string name="about_dialog_andromo_blurb">Powered by %1$s</string>
    <string name="about_dialog_app_version">&lt;b&gt;Version %1$s&lt;/b&gt;</string>
    <string name="about_dialog_build_version">Build version %1$s</string>
    <string name="about_dialog_copyright">Copyright © %1$s</string>
    <string name="about_dialog_developed_by">Developed by %1$s</string>
    <string name="about_dialog_title">About %1$s</string>
    <string name="accept">Accept</string>
    <string name="activity_chooser_view_see_all">See all...</string>
    <string name="airbop_prefs_enable_notification_light_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_light_title">Enable Notification Light</string>
    <string name="airbop_prefs_enable_notification_sound_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_sound_title">Enable Notification Sound</string>
    <string name="airbop_prefs_enable_notifications_summary">On/Off</string>
    <string name="airbop_prefs_enable_notifications_title">Enable Notifications</string>
    <string name="airbop_prefs_notifications_category">App Notification Messages</string>
    <string name="alarm_sound">alarm sound</string>
    <string name="analytics_prefs_enable_analytics_summary_off">Off (not sending anything)</string>
    <string name="analytics_prefs_enable_analytics_summary_on">On (anonymous usage data may be sent)</string>
    <string name="analytics_prefs_enable_analytics_title">Allow this app to collect anonymous usage data.</string>
    <string name="analytics_prefs_usage_data_category">Usage Data</string>
    <string name="ask_to_install_adobe_reader">This feature requires Adobe Reader.\n\nDo you want to install it now?</string>
    <string name="audio_context_menu_alarm_sound">Set as default alarm sound</string>
    <string name="audio_context_menu_cancel_download">Cancel download</string>
    <string name="audio_context_menu_delete">Delete downloaded file</string>
    <string name="audio_context_menu_download">Download</string>
    <string name="audio_context_menu_download_and_play">Download and play</string>
    <string name="audio_context_menu_notification_sound">Set as notification sound</string>
    <string name="audio_context_menu_pause">Pause</string>
    <string name="audio_context_menu_play">Play</string>
    <string name="audio_context_menu_rewind">Rewind</string>
    <string name="audio_context_menu_ringtone">Set as ringtone</string>
    <string name="audio_context_menu_share">Share</string>
    <string name="audio_context_menu_stop">Stop</string>
    <string name="audio_context_menu_stream">Stream</string>
    <string name="audio_context_menu_title">Choose Action:</string>
    <string name="audio_context_menu_track_info">Show track info</string>
    <string name="audio_notification_loading">loading</string>
    <string name="audio_notification_paused">paused</string>
    <string name="audio_notification_playing">playing</string>
    <string name="audio_options_menu_cancel_download">Cancel download</string>
    <string name="audio_options_menu_delete">Delete downloaded file</string>
    <string name="audio_options_menu_download">Download</string>
    <string name="audio_options_menu_goto_current_track">Go to current track</string>
    <string name="audio_options_menu_repeat_mode">Repeat Mode</string>
    <string name="audio_options_menu_repeat_mode_all">All Songs</string>
    <string name="audio_options_menu_repeat_mode_off">Off</string>
    <string name="audio_options_menu_repeat_mode_single">Current Song</string>
    <string name="audio_options_menu_rewind">Rewind</string>
    <string name="audio_options_menu_shuffle_off">Off</string>
    <string name="audio_options_menu_shuffle_on">On</string>
    <string name="audio_options_menu_shuffle_songs">Shuffle Songs</string>
    <string name="audio_options_menu_stop">Stop</string>
    <string name="audio_prefs_default_play_mode_title">Default play mode</string>
    <string name="audio_prefs_podcast_settings_category">Podcast Settings</string>
    <string name="audio_shuffle_is_off">Shuffle is off.</string>
    <string name="audio_shuffle_is_on">Shuffle is on.</string>
    <string name="audio_stream_error">Audio stream error -- playback halted.</string>
    <string name="buffering">Buffering...</string>
    <string name="buffering_track">Buffering: %1$s</string>
    <string name="contact_us_address_heading">ADDRESS</string>
    <string name="contact_us_email_heading">EMAIL</string>
    <string name="contact_us_phone_heading">PHONE</string>
    <string name="contact_us_phone_label_fax">FAX</string>
    <string name="contact_us_phone_label_home">HOME</string>
    <string name="contact_us_phone_label_mobile">MOBILE</string>
    <string name="contact_us_phone_label_work">OFFICE</string>
    <string name="contact_us_website_heading">WEBSITE</string>
    <string name="contacts_app_not_available">Contacts application is not available.</string>
    <string name="context_menu_set_as_contact_icon">Set as contact icon</string>
    <string name="decline">Decline</string>
    <string name="default_download_manager_title">Downloading: %1$s</string>
    <string name="dialer_not_available">The dialer is not available.</string>
    <string name="download_successful">Download Successful</string>
    <string name="downloaded_file_deleted">File deleted.</string>
    <string name="downloading_ringtone_message">Downloading \"%1$s\"...</string>
    <string name="downloading_x_bytesize">Downloading %1$.1f %2$s</string>
    <string name="downloading_x_of_y_bytesize">Downloading %1$.1f of %2$.1f %3$s</string>
    <string name="error_accessing_audio_file">Error accessing audio file.</string>
    <string name="error_could_not_download_audio_file">Unable to set %1$s - could not download audio file.</string>
    <string name="error_could_not_get_selected_item">Error: could not get selected item.</string>
    <string name="error_current_item_has_no_file">Error: current track has no audio file.</string>
    <string name="error_external_storage_not_available">Error: external storage not available (no SD card).</string>
    <string name="error_file_copy_failed">Unable to set %1$s - file copy failed.</string>
    <string name="error_invalid_parameters">Error: invalid parameters.</string>
    <string name="error_loading_twitter_url">Error loading Twitter URL</string>
    <string name="error_loading_url">Error loading URL</string>
    <string name="error_message">Error: %s</string>
    <string name="error_no_playlist">Error: could not access playlist.</string>
    <string name="error_nothing_to_play">Error: no tracks loaded (nothing to play).</string>
    <string name="error_parsing_xml">Error parsing XML</string>
    <string name="error_unable_to_access_cache">Error: unable to access cache.</string>
    <string name="error_unable_to_start_audio_service">Error: unable to start audio service.</string>
    <string name="error_unable_to_start_download">Error: unable to start download.</string>
    <string name="failed_to_open_url">Failed to open the url: %1$s</string>
    <string name="failed_to_set_wallpaper">Failed to set wallpaper.</string>
    <string name="getting_track_info">Getting info...</string>
    <string name="go_to_original_article">Go to Original Article</string>
    <string name="invalid_url_unable_to_process_data">Invalid URL unable to process data.</string>
    <string name="just_now">Just now</string>
    <string name="listening_to">I\'m listening to: %1$s</string>
    <string name="market_not_installed">Market not installed.</string>
    <string name="metadata_bitrate">Bitrate: %1$d</string>
    <string name="metadata_current_listeners">Current Listeners: %1$d (%2$d unique)</string>
    <string name="metadata_max_listeners">Max Listeners: %1$d</string>
    <string name="metadata_peak_listeners">Peak Listeners: %1$d</string>
    <string name="metadata_status_offline">Status: offline</string>
    <string name="metadata_status_online">Status: online</string>
    <string name="network_connection_error">Network connection error.</string>
    <string name="no_app_found_to_open_map_location">No application was found to open the map location.</string>
    <string name="no_app_found_to_open_market_link">No application found to open market link.</string>
    <string name="no_app_found_to_open_play_link">No application found to open Google Play link.</string>
    <string name="no_app_found_to_open_url">No application could be found to open the url.</string>
    <string name="no_current_track">No current track.</string>
    <string name="no_data_connection">No data connection available.</string>
    <string name="no_description">No description</string>
    <string name="no_email_clients_configured">There are no email clients configured.</string>
    <string name="no_track">No Track</string>
    <string name="notification_sound">notification sound</string>
    <string name="options_menu_about">About</string>
    <string name="options_menu_add_contact">Add to contacts</string>
    <string name="options_menu_preferences">Settings</string>
    <string name="options_menu_refresh">Refresh</string>
    <string name="options_menu_save_picture">Save picture</string>
    <string name="options_menu_set_as_wallpaper">Set as wallpaper</string>
    <string name="options_menu_set_picture_as">Set picture as</string>
    <string name="options_menu_share">Share</string>
    <string name="options_menu_toggle_descriptions">Show/hide descriptions</string>
    <string name="paused_at_x">Paused at %1$s</string>
    <string name="paused_at_x_with_percent">Paused at %1$s (%2$s)</string>
    <string name="photo_context_menu_title">Picture Options</string>
    <string name="play_from_x">Play from %1$s</string>
    <string name="pull_to_refresh">Pull to refresh...</string>
    <string name="refreshing_list_items">Loading...</string>
    <string name="about_dialog_custom_text"></string>
</resources>