<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.v7.widget.Toolbar app:theme="?attr/toolbar_theme" app:id="@id/toolbar" app:background="?attr/colorPrimary" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x7f0100a5" app:popupTheme="?attr/toolbar_popup_theme" app:layout_scrollFlags="?attr/toolbar_scroll_flags" />
    <FrameLayout android:id="@id/about_content" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_behavior="@c0113i/appbar_scrolling_view_behavior">
        <ScrollView android:paddingLeft="0dp" android:paddingTop="2dp" android:paddingRight="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
            <LinearLayout android:orientation="vertical" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0dp">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:linksClickable="true" android:id="@id/app_version" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0dp" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:linksClickable="true" android:id="@id/app_developer" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/about_dialog_developed_by" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:id="@id/about_andromo" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_andromo_blurb" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:id="@id/analytics_notice" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_analytics_notice" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@id/custom_text" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_custom_text" />
                <View android:id="@id/about_separator" android:background="?unknown_attr_ref: 101032c" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="0dp" android:layout_marginTop="6dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" />
                <RelativeLayout android:id="@id/andromo_banner" android:background="#fff" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
                    <ImageView android:id="@id/andromo_logo" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andromo_logo" android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/samsung_image" android:paddingTop="16dp" android:paddingBottom="0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/copyright" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="6dp" android:text="@string/about_dialog_copyright" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/build_version" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:layout_marginBottom="16dp" android:text="@string/about_dialog_build_version" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
